--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="nl">
 <head>
     <!-- TRACKING SCRIPTS -->
-    <script src="https://cod.raadsoficial.com/code/8300-05b4e3f1-7c5d-46b4-98b7-76b8e1558bdc"></script>
-    
+<script defer src="https://cdn.raadsgate.com/code/8300-6ae870f4-ca47-44ac-8632-ae9211ae44f4"></script>    
     <!-- TECHNICAL & PERFORMANCE METAS -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
